# multistore

./: .env.dev  .env.prod  .env.prod.db  .forestadmin-schema.json  Dockerfile  README.md  change_name.py  config.py  db.sqlite3  db.telemetry.sqlite3  docker-compose.yaml  main.py  pyproject.toml  req.txt
beav/: admin.py  apps.py  models.py  urls.py
beav/actions/: CreateAction.py
beav/migrations/: 0001_initial.py  0002_alter_attribute_options_alter_entity_options_and_more.py  0002_initial.py  0003_entity_category.py
beav/models/: Attribute.py  Entity.py  Group.py  Value.py  __init__.py
beav/tasks/: CreateTask.py
busket/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
busket/actions/: AddOrUpdateBusketItemAction.py  CreateAction.py  UpdateBusketItemQuantityAction.py  api.py
busket/migrations/: 0001_initial.py  0002_busket_is_active.py  0002_initial.py  0003_busketitem_new_price_busketitem_price_and_more.py  0003_initial.py  0004_alter_busketitem_product.py
django_telemetry/: views.py
handbook/: admin.py  apps.py  models.py  serializers.py  urls.py
multistore/: apps.py  asgi.py  celery.py  request.py  settings.py  urls.py  wsgi.py
nginx/: nginx.conf
order/: admin.py  apps.py  models.py  serializers.py  urls.py  utils.py
photo/: apps.py  models.py  serializers.py  urls.py
product/: admin.py  apps.py  models.py  serializers.py  urls.py
stock/: admin.py  apps.py  models.py  serializers.py  urls.py
store/: admin.py  apps.py  models.py  serializers.py
users/: admin.py  apps.py  exceptions.py  models.py  serializers.py  urls.py
(+194 files in other folders)
